testsuite/poke.pkl/cast-offsets-diag-2.pk
/* { dg-do compile } */

var x = "23#B" as offset<int,B>; /* { dg-error "" } */
